--- a/FemmeConnect.html
+++ b/FemmeConnect.html
@@ -101,7 +101,7 @@ img {margin-bottom: -8px;}
       <a href="https://www.chase.com/business">
         <img src="CHASE_FOR_BUSINESS.jpg" class="w3-image w3-right w3-hide-small" width="335" height="471" alt="alternate text" /> </a>
 
-      <p>Thank you to our sponsor!</p>
+      <p>Thank you to our sponsors!</p>
 
       <div class="w3-center w3-hide-large w3-hide-medium">
         <button class="w3-button w3-block w3-padding-large" onclick="document.getElementById('download').style.display='block'">
